--- a/locales/it.json
+++ b/locales/it.json
@@ -117,6 +117,10 @@
     "copyEventId": "Copia ID Evento",
     "eventPassword": "Password Evento",
     "regeneratePassword": "Rigenera Password",
+    "cancelEvent": "Annulla Evento",
+    "confirmCancelEvent": "Sei sicuro di voler annullare questo evento? Questa azione non può essere annullata.",
+    "eventCancelled": "Evento annullato con successo",
+    "eventCancelledStatus": "Questo evento è stato annullato",
     "courses": {
       "appetizer": "Antipasto",
       "first": "Primo Piatto",
@@ -139,7 +143,8 @@
     "courseReady": "Portata Pronta",
     "eventUpdate": "Aggiornamento Evento",
     "photoUploaded": "Foto Caricata",
-    "newParticipant": "Nuovo Partecipante"
+    "newParticipant": "Nuovo Partecipante",
+    "eventCancelled": "Evento Annullato"
   },
   "settings": {
     "title": "Impostazioni",
