feat: Implement location picker component and maps integration

--- a/locales/en.json
+++ b/locales/en.json
@@ -63,7 +63,14 @@
     "descriptionPlaceholder": "Enter event description",
     "eventType": "Event Type",
     "location": "Location",
-    "locationPlaceholder": "Enter event location",
+    "locationPlaceholder": "Select event location",
+    "selectLocation": "Select Location",
+    "useCurrentLocation": "Use Current Location",
+    "selectOnMap": "Select on Map",
+    "enterAddress": "Enter Address",
+    "findLocation": "Find Location",
+    "locationSelected": "Location Selected",
+    "viewInMaps": "View in Maps",
     "dateTime": "Date & Time",
     "menu": "Menu",
     "addCourses": "Add courses to your event menu",
