--- a/locales/fr.json
+++ b/locales/fr.json
@@ -19,13 +19,13 @@
   },
   "auth": {
     "login": "Connexion",
-    "register": "Inscription",
+    "register": "S'inscrire",
     "signIn": "Se connecter",
     "signUp": "S'inscrire",
     "signOut": "Se déconnecter",
     "email": "Email",
     "password": "Mot de passe",
-    "confirmPassword": "Confirmer le Mot de Passe",
+    "confirmPassword": "Confirmer le mot de passe",
     "name": "Nom complet",
     "forgotPassword": "Mot de passe oublié ?",
     "dontHaveAccount": "Vous n'avez pas de compte ?",
@@ -41,7 +41,7 @@
     "invalidCredentials": "Email ou mot de passe invalide",
     "emailNotVerified": "Veuillez vérifier votre adresse email",
     "verifyEmailSent": "Email de vérification envoyé ! Vérifiez votre boîte de réception.",
-    "emailVerification": "Vérification Email"
+    "emailVerification": "Vérification de l'email"
   },
   "home": {
     "title": "Mes Événements",
@@ -63,10 +63,17 @@
     "descriptionPlaceholder": "Entrez la description de l'événement",
     "eventType": "Type d'Événement",
     "location": "Lieu",
-    "locationPlaceholder": "Entrez le lieu de l'événement",
+    "locationPlaceholder": "Sélectionnez le lieu de l'événement",
+    "selectLocation": "Sélectionner le Lieu",
+    "useCurrentLocation": "Utiliser la Position Actuelle",
+    "selectOnMap": "Sélectionner sur la Carte",
+    "enterAddress": "Entrer l'Adresse",
+    "findLocation": "Trouver le Lieu",
+    "locationSelected": "Lieu Sélectionné",
+    "viewInMaps": "Voir dans Maps",
     "dateTime": "Date et Heure",
     "menu": "Menu",
-    "addCourses": "Ajoutez des plats au menu de votre événement",
+    "addCourses": "Ajoutez des plats à votre menu d'événement",
     "courseName": "Nom du Plat",
     "courseNamePlaceholder": "Entrez le nom du plat",
     "courseDescription": "Description du Plat",
@@ -80,7 +87,7 @@
     "enterEventDetails": "Entrez l'ID de l'événement et le mot de passe fournis par l'organisateur",
     "eventId": "ID de l'Événement",
     "eventIdPlaceholder": "Entrez l'ID de l'événement",
-    "password": "Mot de passe",
+    "password": "Mot de Passe",
     "passwordPlaceholder": "Entrez le mot de passe de l'événement",
     "passwordHint": "Le mot de passe doit contenir au moins 4 caractères",
     "joinEvent": "Rejoindre l'Événement",
@@ -101,15 +108,15 @@
     "noNotifications": "Aucune notification",
     "uploadPhoto": "Télécharger une Photo",
     "takePhoto": "Prendre une Photo",
-    "chooseFromLibrary": "Choisir dans la Galerie",
-    "photoOptions": "Options de Photo",
+    "chooseFromLibrary": "Choisir dans la Bibliothèque",
+    "photoOptions": "Options Photo",
     "downloadPhoto": "Télécharger la Photo",
     "deletePhoto": "Supprimer la Photo",
     "confirmDeletePhoto": "Êtes-vous sûr de vouloir supprimer cette photo ?",
     "photoUploadedSuccess": "Photo téléchargée avec succès !",
     "photoDeletedSuccess": "Photo supprimée avec succès !",
     "photoSavedToGallery": "Photo sauvegardée dans la galerie !",
-    "markServed": "Marquer comme Servi",
+    "markServed": "Marquer Servi",
     "served": "Servi",
     "notFound": "Événement non trouvé",
     "accessDetails": "Détails d'Accès",
@@ -165,7 +172,7 @@
     "fr": "Français"
   },
   "errors": {
-    "networkError": "Erreur réseau. Veuillez vérifier votre connexion.",
+    "networkError": "Erreur réseau. Vérifiez votre connexion.",
     "unknownError": "Une erreur inconnue s'est produite",
     "invalidInput": "Entrée invalide",
     "unauthorized": "Accès non autorisé",
