--- a/locales/it.json
+++ b/locales/it.json
@@ -26,8 +26,8 @@
     "email": "Email",
     "password": "Password",
     "confirmPassword": "Conferma Password",
-    "name": "Nome completo",
-    "forgotPassword": "Password dimenticata?",
+    "name": "Nome Completo",
+    "forgotPassword": "Password Dimenticata?",
     "dontHaveAccount": "Non hai un account?",
     "alreadyHaveAccount": "Hai già un account?",
     "signInWithGoogle": "Accedi con Google",
@@ -38,7 +38,7 @@
     "signInSuccess": "Bentornato!",
     "signUpSuccess": "Account creato con successo!",
     "signOutSuccess": "Disconnesso con successo",
-    "invalidCredentials": "Email o password non validi",
+    "invalidCredentials": "Email o password non valida",
     "emailNotVerified": "Verifica il tuo indirizzo email",
     "verifyEmailSent": "Email di verifica inviata! Controlla la tua casella di posta.",
     "emailVerification": "Verifica Email"
@@ -51,7 +51,7 @@
     "noEventsDescription": "Crea il tuo primo evento o unisciti a uno esistente",
     "myEvents": "I Miei Eventi",
     "joinedEvents": "Eventi a cui Partecipo",
-    "upcomingEvents": "Eventi Futuri",
+    "upcomingEvents": "Eventi Prossimi",
     "pastEvents": "Eventi Passati"
   },
   "createEvent": {
@@ -63,13 +63,20 @@
     "descriptionPlaceholder": "Inserisci la descrizione dell'evento",
     "eventType": "Tipo di Evento",
     "location": "Luogo",
-    "locationPlaceholder": "Inserisci il luogo dell'evento",
+    "locationPlaceholder": "Seleziona il luogo dell'evento",
+    "selectLocation": "Seleziona Luogo",
+    "useCurrentLocation": "Usa Posizione Attuale",
+    "selectOnMap": "Seleziona sulla Mappa",
+    "enterAddress": "Inserisci Indirizzo",
+    "findLocation": "Trova Luogo",
+    "locationSelected": "Luogo Selezionato",
+    "viewInMaps": "Visualizza in Maps",
     "dateTime": "Data e Ora",
     "menu": "Menu",
     "addCourses": "Aggiungi portate al menu del tuo evento",
-    "courseName": "Nome della Portata",
+    "courseName": "Nome Portata",
     "courseNamePlaceholder": "Inserisci il nome della portata",
-    "courseDescription": "Descrizione della Portata",
+    "courseDescription": "Descrizione Portata",
     "courseDescriptionPlaceholder": "Inserisci la descrizione della portata",
     "createEvent": "Crea Evento",
     "eventCreated": "Evento creato con successo!"
@@ -82,7 +89,7 @@
     "eventIdPlaceholder": "Inserisci l'ID dell'evento",
     "password": "Password",
     "passwordPlaceholder": "Inserisci la password dell'evento",
-    "passwordHint": "La password deve essere di almeno 4 caratteri",
+    "passwordHint": "La password deve contenere almeno 4 caratteri",
     "joinEvent": "Unisciti all'Evento",
     "howToJoin": "Come Unirsi",
     "instructions": "Chiedi all'organizzatore dell'evento l'ID dell'evento e la password. Entrambi sono necessari per unirsi all'evento."
@@ -96,12 +103,12 @@
     "invites": "Inviti",
     "details": "Dettagli",
     "participants": "Partecipanti",
-    "noMenu": "Nessun elemento del menu",
+    "noMenu": "Nessuna voce di menu",
     "noPhotos": "Nessuna foto",
     "noNotifications": "Nessuna notifica",
     "uploadPhoto": "Carica Foto",
     "takePhoto": "Scatta Foto",
-    "chooseFromLibrary": "Scegli dalla Galleria",
+    "chooseFromLibrary": "Scegli dalla Libreria",
     "photoOptions": "Opzioni Foto",
     "downloadPhoto": "Scarica Foto",
     "deletePhoto": "Elimina Foto",
@@ -109,7 +116,7 @@
     "photoUploadedSuccess": "Foto caricata con successo!",
     "photoDeletedSuccess": "Foto eliminata con successo!",
     "photoSavedToGallery": "Foto salvata nella galleria!",
-    "markServed": "Segna come Servito",
+    "markServed": "Segna Servito",
     "served": "Servito",
     "notFound": "Evento non trovato",
     "accessDetails": "Dettagli di Accesso",
@@ -122,7 +129,7 @@
     "eventCancelled": "Evento annullato con successo",
     "eventCancelledStatus": "Questo evento è stato annullato",
     "deleteEvent": "Elimina Evento",
-    "confirmDeleteEvent": "Sei sicuro di voler eliminare definitivamente questo evento? Questo rimuoverà tutte le foto, elementi del menu e dati dei partecipanti. Questa azione non può essere annullata.",
+    "confirmDeleteEvent": "Sei sicuro di voler eliminare definitivamente questo evento? Questo rimuoverà tutte le foto, voci di menu e dati dei partecipanti. Questa azione non può essere annullata.",
     "courses": {
       "appetizer": "Antipasto",
       "first": "Primo Piatto",
